--- a/web/css/pages/home/home-new.less
+++ b/web/css/pages/home/home-new.less
@@ -66,7 +66,7 @@
     min-width: initial;
     padding: 0 18px;
     height: 35px;
-    line-height: 35px;
+    line-height: 34px;
     border-radius: 3px;
     font-size: 12px;
     letter-spacing: 1px;
